--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.14.0",
     "axios": "^1.7.1",
     "cheerio": "^1.0.0-rc.12",
     "csv-writer": "^1.6.0",
     "node-cron": "^3.0.3",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.12",
+    "prisma": "^5.14.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
