--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "axios": "^1.7.1",
     "cheerio": "^1.0.0-rc.12",
     "csv-writer": "^1.6.0",
-    "node-cron": "^3.0.3",
-    "sqlite3": "^5.1.7"
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
