--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./index.js",
     "scrape-sf-ava": "node ./sfbay/scrape.js"
   },
   "keywords": [],
@@ -15,7 +16,10 @@
     "axios": "^1.7.1",
     "cheerio": "^1.0.0-rc.12",
     "csv-writer": "^1.6.0",
-    "node-cron": "^3.0.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node-cron": "^3.0.3",
+    "nodemon": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
