--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./index.js",
-    "scrape-sf-ava": "node ./sfbay/scrape.js"
+    "scrape-sf-ava": "node ./sfbay/scrape.js",
+    "cron": "node ./cron/cron.js",
+    "cron-test": "node ./cron/cron-example.js"
   },
   "keywords": [],
   "author": "",
