--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon ./index.js",
     "scrape-sf-ava": "node ./sfbay/scrape.js",
     "cron": "node ./cron/cron.js",
-    "cron-test": "node ./cron/cron-example.js"
+    "cron-test": "node ./cron/cron-example.js",
+    "test-file": "node test.js"
   },
   "keywords": [],
   "author": "",
