--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./index.js",
-    "scrape-sf-ava": "node ./sfbay/scrape.js"
+    "scrape-sf-ava": "node ./sfbay/avalon/scrape.js",
+    "scrape-sf-quarterra": "node ./sfbay/quarterra/scrape.js"
   },
   "keywords": [],
   "author": "",
@@ -15,11 +16,13 @@
     "@prisma/client": "^5.14.0",
     "axios": "^1.7.1",
     "cheerio": "^1.0.0-rc.12",
+    "chromedriver": "^125.0.1",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "node-cron": "^3.0.3",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "selenium-webdriver": "^4.21.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
