--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./src/index.js",
     "server": "nodemon ./src/index.js",
+    "scrape-all": "npm-run-all --sequential scrape-la-eq scrape-sf-ava scrape-sf-eq scrape-sf-quarterra",
     "scrape-la-eq": "node ./src/ca/la/equity/scrape.js",
     "scrape-sf-ava": "node ./src/ca/sfbay/avalon/scrape.js",
     "scrape-sf-eq": "node ./src/ca/sfbay/equity/scrape.js",
@@ -29,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
+    "npm-run-all": "^4.1.5",
     "prisma": "^5.14.0",
     "slocjs": "^1.1.4",
     "ts-node": "^10.9.2",
