--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "rental-scraper",
   "version": "1.0.0",
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,7 +22,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.14.0",
     "axios": "^1.7.1",
     "cheerio": "^1.0.0-rc.12",
     "chromedriver": "^125.0.1",
@@ -32,7 +35,6 @@
   "devDependencies": {
     "@types/node": "^20.12.12",
     "npm-run-all": "^4.1.5",
-    "prisma": "^5.14.0",
     "slocjs": "^1.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
