--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.js",
-    "server": "nodemon ./src/index.js",
+    "start": "node ./server/index.js",
+    "server": "nodemon ./server/index.js",
     "scrape-all": "npm-run-all --sequential scrape-la-eq scrape-sf-ava scrape-sf-eq scrape-sf-quarterra",
-    "scrape-la-eq": "node ./src/ca/la/equity/scrape.js",
-    "scrape-sf-ava": "node ./src/ca/sfbay/avalon/scrape.js",
-    "scrape-sf-eq": "node ./src/ca/sfbay/equity/scrape.js",
-    "scrape-sf-quarterra": "node ./src/ca/sfbay/quarterra/scrape.js",
+    "scrape-la-eq": "node ./scraper/ca/la/equity/scrape.js",
+    "scrape-sf-ava": "node ./scraper/ca/sfbay/avalon/scrape.js",
+    "scrape-sf-eq": "node ./scraper/ca/sfbay/equity/scrape.js",
+    "scrape-sf-quarterra": "node ./scraper/ca/sfbay/quarterra/scrape.js",
     "count-sloc": "cd misc && node count.js"
   },
   "keywords": [],
